--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -83,17 +83,8 @@
     }
   }
 
-  #footer {
-    padding: 1em;
-    border-top: 2px solid #c3f1d1;
-  }
-  
-  #footer p {
-    margin-bottom: 0;
-    font-weight: bold;
-  }
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-device-width: 768px) {
       #details {
           padding: 1em 3em;
       }
