--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -147,18 +147,8 @@
   color: black;
 }
 
-#footer {
-  padding: 1em;
-  border-top: 2px solid #c3f1d1;
-}
 
-#footer p {
-  margin-bottom: 0;
-  font-weight: bold;
-}
-
-
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-device-width: 768px) {
    h3 {
      font-size: calc(1.375rem + 1.5vw);
    }
