--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -35,7 +35,7 @@
         <div class="col-12 justify-content-center text-center">
             <h4>Forge Your Own Learning Path</h4>
         </div>
-        <div class="col-12 col-md-4 justify-content-center text-center mt-3">
+        <div class="col-12 col-lg-4 justify-content-center text-center mt-3">
             <div id="learn" class="card">
                 <div class="card-body">
                 <h5 class="inner card-title">Learn</h5>
@@ -43,7 +43,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-12 col-md-4 justify-content-center text-center mt-3">
+        <div class="col-12 col-lg-4 justify-content-center text-center mt-3">
             <div id="practice" class="card">
                 <div class="card-body">
                 <h5 class="inner card-title">Practice</h5>
@@ -51,7 +51,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-12 col-md-4 justify-content-center text-center mt-3">
+        <div class="col-12 col-lg-4 justify-content-center text-center mt-3">
             <div id="test" class="card">
                 <div class="card-body">
                     <h5 class="inner card-title">Test Mastery</h5>
@@ -61,12 +61,6 @@
         </div>
         <div class="col-12 justify-content-center text-center mt-4">
             <a routerLink="/about"><button class="btn btn-success">Find out more</button></a>
-        </div>
-    </div>
-    <div id="footer" class="row d-flex align-items-center">
-        <div class="col-12 justify-content-center text-center">
-            <p>Copyright &copy; 2020 KAD Enterprises</p>
-            <p>All Rights Reserved</p>
         </div>
     </div>
 </div>
