--- a/src/app/components/student-hub/activity/activity-form/activity-form.component.html
+++ b/src/app/components/student-hub/activity/activity-form/activity-form.component.html
@@ -1,48 +1,83 @@
-    <div class="row d-flex align-items-center">
-        <div class="col-12 justify-content-center text-center">
-            <form id="ruleChoiceForm">
-                <!-- <div class="container"> -->
-                    <!-- <div class="row align-items-center"> -->
-                        <!-- <div class="col-12 col-md-5 my-1"> -->
-                          <label class="me-sm-2 sr-only" for="inlineFormRuleSelect">Rule</label>
-                          <select class="custom-select me-sm-2 mb-4" id="inlineFormRuleSelect" [formControl]="rule">
-                            <option selected>Choose a tajweed rule</option>
-                            <option value="ghunnah">Ghunnah</option>
-                            <option value="idghaamGhunnah">Idghaam w/ Ghunnah</option>
-                            <option value="idghaamNoGhunnah">Idghaam w/ No Ghunnah</option>
-                            <option value="ikhfa">Ikhfa</option>
-                            <option value="iqlab">Iqlab</option>
-                            <option value="madd246">Regular Madd - 2, (optional 4, or optional 6)</option>
-                            <option value="madd">Long Madd</option>
-                            <option value="qalqalah">Qalqalah</option>
-                            <option value="hamzatWasl">Hamzatul Wasl</option>
-                          </select>
-                        <!-- </div> -->
-                        <!-- <div class="col-12 col-md-5 my-1"> -->
-                          <label class="me-sm-2 sr-only" for="inlineFormAyatSelect">Number of Ayat</label>
-                          <select class="custom-select me-sm-2 mb-4" id="inlineFormAyatSelect" [formControl]="range">
-                            <option selected>Choose a number of random Ayat</option>
-                            <option value="5">Five</option>
-                            <option value="10">Ten</option>
-                            <option value="20">Twenty</option>
-                          </select>
-                        <!-- </div> -->
-                        <!-- <div class="col-auto my-1"> -->
-                          <button (click)="submitSelected()" type="submit" class="btn btn-primary btn-sm">Submit</button>
-                        <!-- </div> -->
-                      <!-- </div> -->
-                <!-- </div> -->
-              </form>
-        </div>  
+<div class="row d-flex align-items-center">
+  <div class="col-12 justify-content-center text-center">
+    <form id="ruleChoiceForm">
+
+      <label class="me-sm-2 sr-only" for="inlineFormRuleSelect">Rule</label>
+      <select class="custom-select me-sm-2 mb-4" id="inlineFormRuleSelect" [formControl]="rule">
+        <option selected>Choose a tajweed rule</option>
+        <option value="ghunnah">Ghunnah</option>
+        <option value="idghaamGhunnah">Idghaam w/ Ghunnah</option>
+        <option value="idghaamNoGhunnah">Idghaam w/ No Ghunnah</option>
+        <option value="ikhfa">Ikhfa</option>
+        <option value="iqlab">Iqlab</option>
+        <option value="madd246">Regular Madd - 2, (optional 4, or optional 6)</option>
+        <option value="madd">Long Madd</option>
+        <option value="qalqalah">Qalqalah</option>
+        <option value="hamzatWasl">Hamzatul Wasl</option>
+      </select>
+
+      <label class="me-sm-2 sr-only" for="inlineFormAyatSelect">Number of Ayat</label>
+      <select class="custom-select me-sm-2 mb-4" id="inlineFormAyatSelect" [formControl]="range">
+        <option selected>Choose a number of random Ayat</option>
+        <option value="5">Five</option>
+        <option value="10">Ten</option>
+        <option value="20">Twenty</option>
+      </select>
+
+      <button (click)="submitSelected()" type="submit" class="btn btn-primary btn-sm">Submit</button>
+
+    </form>
+  </div>
 </div>
 <div class="row d-flex">
+  <div class="col-12">
+    <div *ngIf="ruleCount > 0">
+    <div class="legend found">Found</div>
+    <div class="legend missed">Missed</div>
+    <div class="legend wrong">Wrong</div>
+    </div>
+  </div>
   <div class="col-12 mt-5">
-    <div #appAyat>
+    <div class="appAyat" #appAyat (click)='handleClick($event)'>
 
     </div>
 
+    <div *ngIf="status === 're-submit'">
+      <p>Oops!! These ayat don't have this rule. Please try again.</p>
+    </div>
 
-    {{status}}
+    <div *ngIf="activity === 'practice'">
+      <div *ngIf="ruleCount > 0 && counter < ruleCount">
+        <p>Score: {{counter}}/{{ruleCount}}</p>
+        <p style="color: pink">Wrong Clicks: {{wrongCount}}</p>
+
+      </div>
+  
+      <div *ngIf="ruleCount !== 0 && counter ===ruleCount">
+        <p>Yay!! You won.</p>
+        <p style="color: pink">Wrong Clicks: {{wrongCount}}</p>
+
+      </div>
+
+    </div>
+
+    <div *ngIf="activity === 'test'">
+      <button *ngIf="ruleCount > 0 && !testComplete" (click)='showScore()' class="btn btn-primary">Calculate score</button>
+
+      <div *ngIf="testComplete">
+        <p>Score: {{counter}}/{{ruleCount}}</p>
+
+        <p>% mastery: {{calculateScore()}}%</p>
+        <p>Wrong Clicks: {{wrongCount}}</p>
+      </div>  
     
+    </div>
+
+
+
+   
+
+
+
   </div>
 </div>
