--- a/src/app/components/student-hub/student-hub.component.css
+++ b/src/app/components/student-hub/student-hub.component.css
@@ -45,7 +45,8 @@
 
  @media only screen and (min-device-width: 768px) and (min-device-height: 768px) {
   #student-hub {
-    height: 80vh;
+    height: auto;
+    min-height: 100vh;
 }
 
 .row.outer {
