added learning page details

--- a/src/app/components/student-hub/activity/activity-form/activity-form.component.css
+++ b/src/app/components/student-hub/activity/activity-form/activity-form.component.css
@@ -16,8 +16,17 @@ audio#quranRec {
     width: 12em;
 }
 
+.expl {
+    width: 75%;
+    margin: 0 auto;
+}
+
 .notFound {
     color: inherit
+}
+
+.learning {
+    color: red
 }
 
 .found {
