--- a/src/app/components/student-hub/activity/activity-form/activity-form.component.html
+++ b/src/app/components/student-hub/activity/activity-form/activity-form.component.html
@@ -1,7 +1,6 @@
 <div class="row d-flex align-items-center">
   <div class="col-12 justify-content-center text-center">
     <form id="ruleChoiceForm">
-
       <label class="me-sm-2 sr-only" for="inlineFormRuleSelect">Rule</label>
       <select class="custom-select me-sm-2 mb-4" id="inlineFormRuleSelect" [formControl]="rule">
         <option selected>Choose a tajweed rule</option>
@@ -15,25 +14,41 @@
         <option value="qalqalah">Qalqalah</option>
         <option value="hamzatWasl">Hamzatul Wasl</option>
       </select>
-
-      <label class="me-sm-2 sr-only" for="inlineFormAyatSelect">Number of Ayat</label>
-      <select class="custom-select me-sm-2 mb-4" id="inlineFormAyatSelect" [formControl]="range">
+ 
+      <label *ngIf="activity != 'learn'" class="me-sm-2 sr-only" for="inlineFormAyatSelect">Number of Ayat</label>
+      <select *ngIf="activity != 'learn'" class="custom-select me-sm-2 mb-4" id="inlineFormAyatSelect" [formControl]="range">
         <option selected>Choose a number of random Ayat</option>
         <option value="5">Five</option>
         <option value="10">Ten</option>
         <option value="20">Twenty</option>
       </select>
 
-      <button (click)="submitSelected()" type="submit" class="btn btn-primary btn-sm">Submit</button>
-
+      <button (click)="activity === 'learn' ?  getExplanation() : submitSelected()" type="submit" class="btn btn-primary btn-sm">Submit</button>
     </form>
   </div>
 </div>
-<div class="row d-flex">
-  <div class="col-12 mt-3 mb-5">
-    <div *ngIf="ruleCount > 0">
-      <hr style="border: 2px solid gray"/>
 
+<hr style="border: 2px solid gray"/>
+
+<div class="row d-flex">
+  <div *ngIf="activity === 'learn'" class="col-12 mt-3">
+   <img class="expl img-fluid" src={{explanationSummary}}>
+    <img class="expl img-fluid" src="{{explanationDetails}}">
+    <img src="{{explanationExample}}" class="expl img-fluid">
+
+    <audio *ngIf="explanationAudio" controls>
+      <source [src]="explanationAudio" type="audio/mpeg">
+    </audio>
+
+    <div class="mt-5" *ngIf="explanationSummary" >
+      <h5 class="text-center">Now your turn to practice</h5>
+      <button (click)="submitSelected()" class="btn btn-primary">Get Random Ayah</button>
+    </div>
+    
+    
+  </div>
+  <div class="col-12 mt-3">
+    <div *ngIf="ruleCount > 0">
         <div class="mb-1">Bonus: Record Your Own Recitation</div>
         <div>
           <button class="btn btn-success mb-1" *ngIf="!isAudioRecording && !audioBlobUrl" (click)="startAudioRecording()">Start Audio Recording</button>
@@ -46,13 +61,13 @@
           </audio>
         </div>
       </div>
-    </div>
+  </div>
 
   <div class="col-12 mt-3">
-    <div *ngIf="ruleCount > 0">
-    <div class="legend found">Found</div>
-    <div class="legend missed">Missed</div>
-    <div class="legend wrong">Wrong</div>
+    <div *ngIf="ruleCount > 0 && activity !== 'learn'">
+      <div class="legend found">Found</div>
+      <div class="legend missed">Missed</div>
+      <div class="legend wrong">Wrong</div>
     </div>
   </div>
 
@@ -61,7 +76,7 @@
       <p class="reg-text">Oops!! These ayat don't have this rule. Please try again.</p>
     </div>
 
-    <div *ngIf="activity === 'practice'">
+    <div *ngIf="activity !== 'test'">
       <div *ngIf="ruleCount > 0 && counter < ruleCount">
         <p class="reg-text">Score: {{counter}}/{{ruleCount}}</p>
         <p class="reg-text" style="color: pink">Wrong Clicks: {{wrongCount}}</p>
