--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+        <ul *ngIf="!authStatus" class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" routerLink="/start">Get Started</a>
           </li>
@@ -13,6 +14,21 @@
             <a class="nav-link" routerLink="/about">About</a>
           </li>    
         </ul>
+
+        <ul *ngIf="authStatus" class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/about">About</a>
+          </li>    
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/account">My Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()">Logout</a>
+          </li>
+        </ul>
+
+
+
       </div>
     </div>
   </nav>
