--- a/src/app/components/student/student-hub/student-hub.component.html
+++ b/src/app/components/student/student-hub/student-hub.component.html
@@ -1,6 +1,7 @@
 <div id ="student-hub" class="container-fluid">
     <div class="row d-flex align-items-center outer">
         <div class="col-12 justify-content-center text-center">
+
             <container-element [ngSwitch]="action">
                 <some-element *ngSwitchCase="'working'">
                     <app-activity [activity]="activity"></app-activity>
@@ -9,7 +10,7 @@
                 <some-element *ngSwitchDefault>
                     <div class="row d-flex align-items-center">
                         <div class="col-12 justify-content-center text-center">
-                            <h1>What would you like to do?</h1>
+                            <h1>Hello {{user.firstName}}! What would you like to do?</h1>
                         </div>
                         <div class="col-12 col-lg-4 justify-content-center text-center mt-3">
                             <div (click)="setActivity('learn')" id="learn" class="card">
