--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -20,6 +20,9 @@
             <a class="nav-link" routerLink="/about">About</a>
           </li>    
           <li class="nav-item">
+            <a class="nav-link" routerLink="/student-hub">Student Hub</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/account">My Account</a>
           </li>
           <li class="nav-item">
