--- a/src/app/components/student/account/account.component.css
+++ b/src/app/components/student/account/account.component.css
@@ -1,6 +1,10 @@
-.nav {
+.nav.nav-tabs.flex-column {
     background-color: green;
     height: 100vh;
+}
+
+#ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active {
+background-color: #0d6efd;
 }
 
 .nav a {
@@ -11,6 +15,6 @@
     padding: 2em;
 }
 
-.col-3 {
+.col-2 {
     padding: 0;
 }
