added progress graph and finished test tab

--- a/src/app/components/student/account/account.component.html
+++ b/src/app/components/student/account/account.component.html
@@ -6,13 +6,13 @@
                   <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Dashboard</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <a class="nav-link" id="activity-tab" data-bs-toggle="tab" href="#activity" role="tab" aria-controls="activity" aria-selected="false">View PracticeActivity</a>
+                  <a class="nav-link" id="activity-tab" data-bs-toggle="tab" href="#activity" role="tab" aria-controls="activity" aria-selected="false">View All Practice</a>
                 </li>
                 <li class="nav-item" role="presentation">
                   <a class="nav-link" id="scores-tab" data-bs-toggle="tab" href="#scores" role="tab" aria-controls="scores" aria-selected="false">View Tests & Scores</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="progress-tab" data-bs-toggle="tab" href="#progress" role="tab" aria-controls="progress" aria-selected="false">View All Progress</a>
+                    <a (click)="generateGraph('ghunnah')" class="nav-link" id="progress-tab" data-bs-toggle="tab" href="#progress" role="tab" aria-controls="progress" aria-selected="false">View All Progress</a>
                   </li>
               </ul>
         </div>
@@ -37,8 +37,8 @@
                             <div class="tab-content pt-4" id="ruleTabContent">
                                 <div *ngFor="let r of ruleList; let i = index" [ngClass]="i == 0 ? 'tab-pane fade show active' : 'tab-pane fade'" id='{{r.code}}' role="tabpanel" aria-labelledby="{{r.code}}-tab">
                                     <div *ngIf="stats[i].practice.length !== 0 || stats[i].test.length !== 0; else unworked">
-                                        <p><b>Last Practice: </b><span *ngIf="stats[i].practice.length !== 0; else noPractice">{{stats[i].practice[0].practice_date}}</span><ng-template #noPractice>No practice yet</ng-template></p>
-                                        <p><b>Last Test: </b><span *ngIf="stats[i].test.length !== 0; else noTest">{{stats[i].test[0].test_date}}</span><ng-template #noTest>No test yet</ng-template></p>
+                                        <p><b>Last Practice: </b><span *ngIf="stats[i].practice.length !== 0; else noPractice">{{stats[i].practice[0].practice_date | date: 'fullDate' : '+0000'}}</span><ng-template #noPractice>No practice yet</ng-template></p>
+                                        <p><b>Last Test: </b><span *ngIf="stats[i].test.length !== 0; else noTest">{{stats[i].test[0].test_date | date: 'fullDate' : '+0000'}}</span><ng-template #noTest>No test yet</ng-template></p>
                                     </div>
                                     <ng-template #unworked> 
                                         <p>No activity yet</p>
@@ -63,16 +63,23 @@
                                 <div *ngFor="let r of ruleList; let i = index" [ngClass]="i == 0 ? 'tab-pane fade show active' : 'tab-pane fade'" id='{{r.code}}All' role="tabpanel" aria-labelledby="{{r.code}}All-tab">
                                         <div *ngIf="stats[i].practice.length !== 0; else prac">
                                             <div class="row d-flex">
-                                                <div class="col-12">
+                                                <div class="col-12 text-center">
                                                     <h6><b>Total Ayah Practiced: </b><span>{{stats[i].practice_ayah_count}}</span></h6>
                                                 </div>
                                                 <hr>
                                                 <div class="col-12 mt-3">
-                                                    <div *ngFor="let item of stats[i].sorted_practice">
-                                                        <p><b>Date: </b><span>{{item.date}}</span></p>
-                                                        <p><b># of Ayah: </b><span>{{item.ayah}}</span></p>
+                                                    <div *ngFor="let item of stats[i].sorted_practice | keyvalue">
+                                                        <div class="row d-flex">
+                                                            <div class="col-12 col-md-6">
+                                                                <p><b>Date: </b><span>{{item.key }}</span></p>
+                                                            </div>
+                                                            <div class="col-12 col-md-6">
+                                                                <p><b># of Ayah: </b><span>{{item.value.ayah_count}}</span></p>
+                                                            </div>
+                                                        </div>
+                                                        <hr>
                                                     </div>
-                                                    <hr>
+                                                   
                                                 </div>                                          
                                             </div>                                         
                                         </div>
@@ -98,9 +105,33 @@
                             <div class="tab-content pt-4" id="allTestTabContent">
                                 <div *ngFor="let r of ruleList; let i = index" [ngClass]="i == 0 ? 'tab-pane fade show active' : 'tab-pane fade'" id='{{r.code}}Test' role="tabpanel" aria-labelledby="{{r.code}}Test-tab">
                                         <div *ngIf="stats[i].test.length !== 0; else test">
+                                            <div class="row d-flex">
+                                                <div class="col-12 col-md-6 text-center">
+                                                    <h6><b>Total Ayah Tested: </b><span>{{stats[i].test_ayah_count}}</span></h6>
+                                                </div>
+                                                <div class="col-12 col-md-6 text-center">
+                                                    <h6><b>Cummulative Mastery: </b><span>{{((stats[i].total_correct/stats[i].total_out_of) * 100).toFixed(1)}}%</span></h6>
+                                                </div>
+                                                <hr>
+                                            </div>
                                             <div *ngFor="let tActivity of stats[i].test">
-                                                <p><b>Date: </b><span>{{tActivity.test_date}}</span></p>
-                                                <p><b># of Ayah: </b><span>{{tActivity.test_ayah_count}}</span></p>
+                                                <div class="row d-flex">
+                                                    <div class="col-12 col-md-3">
+                                                        <p><b>Date: </b><span>{{tActivity.test_date | date: 'fullDate' : '+0000'}}</span></p>
+                                                    </div>
+                                                    <div class="col-12 col-md-3">
+                                                        <p><b># of Ayah: </b><span>{{tActivity.test_ayah_count}}</span></p>
+                                                    </div>
+                                                    <div class="col-12 col-md-3">
+                                                        <p><b>Score: </b><span>{{tActivity.test_score_composite}}</span></p>
+                                                    </div>
+                                                    <div class="col-12 col-md-3">
+                                                        <p><b>% Mastery: </b><span>{{((tActivity.test_score_correct/tActivity.test_out_of_count)*100).toFixed(1)}}%</span></p>
+                                                    </div>
+                                                    
+                                                </div>
+                                                
+                                                
                                             </div>
                                         </div>
                                         <ng-template #test>
@@ -113,7 +144,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="progress" role="tabpanel" aria-labelledby="progress-tab">Progress</div>
+                <div class="tab-pane fade" id="progress" role="tabpanel" aria-labelledby="progress-tab">
+                    <div class="row d-flex">
+                        <div class="col-12 mt-3">
+                            <h4 class="mb-4">All Tests Activity & Scores</h4>
+                            <div>
+                                <ul class="nav nav-tabs" id="allProgressTab" role="tablist">
+                                    <li *ngFor="let r of ruleList; let i = index" class="nav-item" role="presentation">
+                                        <a (click)="generateGraph(r.code)" [ngClass]="i == 0 ? 'nav-link active' : 'nav-link'" id='{{r.code}}Line-tab' data-bs-toggle="tab" href='#{{r.code}}Line' role="tab" aria-controls='{{r.code}}Line' aria-selected="i == 0 ? true : false">{{r.name}}</a>
+                                      </li>
+                                  </ul> 
+                            </div>
+                            <div class="tab-content pt-4" id="allProgressTabContent">
+                                <div *ngFor="let r of ruleList; let i = index" [ngClass]="i == 0 ? 'tab-pane fade show active' : 'tab-pane fade'" id='{{r.code}}Line' role="tabpanel" aria-labelledby="{{r.code}}Line-tab">
+                                        <div *ngIf="stats[i].test.length !== 0; else test">
+                                                <svg id='{{r.code}}' width="auto" height="75vh"></svg>
+                                
+                                            
+                                                                               
+                                        </div>
+                                        <ng-template #test>
+                                            <p>No tests yet</p>
+                                        </ng-template>
+                                   
+                            
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
