--- a/src/app/components/student/account/account.component.css
+++ b/src/app/components/student/account/account.component.css
@@ -3,7 +3,7 @@
     height: 100vh;
 }
 
-#ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active {
+#ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active, #allProgressTab.nav-tabs .nav-link.active {
 background-color: #0d6efd;
 }
 
@@ -17,4 +17,9 @@ background-color: #0d6efd;
 
 .col-2 {
     padding: 0;
+}
+
+
+#allProgressTabContent {
+    padding: 2em
 }
