--- a/src/app/components/student/account/account.component.css
+++ b/src/app/components/student/account/account.component.css
@@ -3,7 +3,7 @@
     height: 100vh;
 }
 
-#ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active, #allProgressTab.nav-tabs .nav-link.active {
+#ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active, #allProgressTab.nav-tabs .nav-link.active, #userTab.nav-tabs .nav-link.active {
 background-color: #0d6efd;
 }
 
@@ -22,4 +22,9 @@ background-color: #0d6efd;
 
 #allProgressTabContent {
     padding: 2em
+}
+
+input {
+    display: block;
+    margin: 1em 0;
 }
