--- a/src/app/components/student/account/account.component.css
+++ b/src/app/components/student/account/account.component.css
@@ -1,6 +1,6 @@
 .nav.nav-tabs.flex-column {
     background-color: green;
-    height: 100vh;
+    height: 100%;
 }
 
 #ruleTab.nav-tabs .nav-link.active, #allActivityTab.nav-tabs .nav-link.active, #allTestTab.nav-tabs .nav-link.active, #allProgressTab.nav-tabs .nav-link.active, #userTab.nav-tabs .nav-link.active {
@@ -27,4 +27,26 @@ background-color: #0d6efd;
 input {
     display: block;
     margin: 1em 0;
+}
+
+th {
+    padding: 1em;
+    text-align: center;
+}
+
+td {
+    padding: 1em;
+    text-align: center;
+}
+
+.tcol {
+    text-align: left;
+}
+
+#resetForm {
+    text-align: center;
+}
+
+table {
+    margin: 0 auto;
 }
